--- a/index.html
+++ b/index.html
@@ -23,14 +23,17 @@
       </nav>
 
       <nav class="mobile-nav">
-        <a href="#home"
-          ><img
-            src="./images/choiceisourslogo.png"
-            alt="the choice is ours logo"
-        /></a>
+        <div class="navimages">
+          <a href="#home"
+            ><img
+              src="./images/choiceisourslogo.png"
+              alt="the choice is ours logo"
+          /></a>
 
-        <div>&#9776;</div>
-        <div id="menuToggle">
+          <div id="hamburger" onclick="menuToggle()">&#9776;</div>
+        </div>
+
+        <div id="menu-items">
           <a class="nav-item" href="#home">HOME</a>
           <a class="nav-item" href="#about">ABOUT THE CAUSE</a>
           <a class="nav-item" href="#news">REPRODUCTIVE NEWS</a>
@@ -96,8 +99,8 @@
           <h3>Article Title</h3>
         </div>
       </div>
-    </div>
+    </div> -->
 
-    <script src="./script.js"></script> -->
+    <script src="./script.js"></script>
   </body>
 </html>
