--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
       </nav>
 
-      <!-- <div class="hero">
+      <div class="hero">
         <h1>THIS IS OUR CHOICE</h1>
         <p>
           Something about how the government should not be able to take away the
@@ -51,7 +51,7 @@
           make that choice.
         </p>
         <a href="#donate"><button>Donate to the Cause</button></a>
-      </div> -->
+      </div>
     </main>
 
     <!-- <div id="about">
