news section responsive

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </div>
     </main>
 
-    <!-- <div id="about">
+    <div id="about">
       <h1>Clever About the Cause Heading</h1>
       <p>
         little blurb about who we are and why we’re campaigning. texas lady blah
@@ -99,7 +99,7 @@
           <h3>Article Title</h3>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <script src="./script.js"></script>
   </body>
