first part of donate section

--- a/index.html
+++ b/index.html
@@ -101,6 +101,25 @@
       </div>
     </div>
 
+    <div id="donate">
+      <h1>Donate to the Cause</h1>
+      <div class="money-box">
+        <div class="preset-dollar-box">
+          <div class="dollar-buttons">$1</div>
+          <div class="dollar-buttons">$5</div>
+          <div class="dollar-buttons">$10</div>
+          <div class="dollar-buttons">$20</div>
+          <div class="dollar-buttons">$50</div>
+        </div>
+        <p>or</p>
+        <div class="user-amount-box">
+          <input type="text" id="money" name="money" />
+          <label for="money">Enter Your Own</label>
+        </div>
+      </div>
+      <div class="section-underline"></div>
+    </div>
+
     <script src="./script.js"></script>
   </body>
 </html>
