donate button and checkbox added and responsive

--- a/index.html
+++ b/index.html
@@ -220,17 +220,17 @@
         </div>
       </div>
 
-      <!-- <div class="donate-button-checkbox">
-        <input type="checkbox" id="opt-in" name="opt-in" />
-        <label for="opt-in">
-          Check this box to recieve updates and news about reproductive health
-          and rights.
-        </label>
-        <button>
-          Donate
-        </button>
+      <div class="donate-button-checkbox">
+        <div class="checkbox-box">
+          <input type="checkbox" id="opt-in" name="opt-in" />
+          <p>
+            Check this box to recieve updates and news <br />
+            about reproductive health and rights.
+          </p>
+        </div>
 
-      </div> -->
+        <button>Donate</button>
+      </div>
     </div>
 
     <script src="./script.js"></script>
