added image to hero and some real body copy

--- a/index.html
+++ b/index.html
@@ -42,15 +42,17 @@
       </nav>
 
       <div class="hero">
-        <h1>THIS IS OUR CHOICE</h1>
+        <h1>
+          THIS IS <br />
+          OUR CHOICE
+        </h1>
         <p>
-          Something about how the government should not be able to take away the
-          right we have to our own bodies. We should be able to have the choice
-          to either carry a pregnancy to term or abort, and we should have the
-          ability to evacuate the pregnancy should circumstances force us to
-          make that choice.
+          We own our bodies yet the government believes they have control over
+          them. It should be our choice to either carry a pregnancy to term or
+          abort, not theirs. Additionally, abortions are a right that can
+          prevent unnecessary death due to pregnancy complications.
         </p>
-        <a href="#donate"><button>Donate to the Cause</button></a>
+        <a href="#donate"><button>Make a Difference</button></a>
       </div>
     </main>
 
