added correct fonts to the about section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/style.css" />
@@ -63,12 +63,14 @@
     </main>
 
     <div id="about">
-      <h1>Clever About the Cause Heading</h1>
+      <h1>Let Individuals Control Their Own Choice</h1>
       <p>
-        little blurb about who we are and why we’re campaigning. texas lady blah
-        blah. baldjh ds fsadf s ajflasjdfl jd jsldkjflk adj aljdlfjl
-        jlajljlajdflj. lakdjflj laj jlkdlkjlakjkl. asdjlj lajdlkrfj ljdf ksdjf
-        akldjfljadfj aldjfl jlfjladj lfjaldf.
+        The choice has always been ours, but politics are taking our choice
+        away. Our campaign was put into motion when Amanda Eid lost her child in
+        the womb and was denied an abortion in Texas due to laws put in place.
+        The fetus was long dead and risking going septic yet the law still
+        prohibited it. This must be stopped. <br />
+        Click the images below to find out more.
       </p>
       <div class="flexbox">
         <div class="point"></div>
