about points added

--- a/index.html
+++ b/index.html
@@ -73,9 +73,34 @@
         Click the images below to find out more.
       </p>
       <div class="flexbox">
-        <div class="point"></div>
-        <div class="point"></div>
-        <div class="point"></div>
+        <div class="point">
+          <h4 id="first-point-header">It isn't easy</h4>
+          <p id="first-point-body">
+            Pregnancy isn't an easy thing for a woman to go through. Through the
+            9 months, a woman will experience weight gain, increased heart
+            functions, changes in hormones, and much more. It is not an easy
+            life change and can result in health risks if the pregnancy goes
+            wrong.
+          </p>
+        </div>
+        <div class="point">
+          <h4 id="second-point-header">It can be hard</h4>
+          <p id="second-point-body">
+            Sometimes, tragedy strikes and the fetus does not survive. Choosing
+            an abortion for any kind of pregnancy is always going to be a tough
+            choice for the mother, but it should always be a path they can take.
+            Especially when the fetus dies in development which can lead to
+            extreme health risks for the mother.
+          </p>
+        </div>
+        <div class="point">
+          <h4 id="third-point-header">It can be a risk</h4>
+          <p id="third-point-body">
+            Limiting a woman's choice can mean an inevitable demise for many.
+            Sometimes, an abortion is necessary and lawmakers are making it
+            impossible. The ban on abortions is killing people.
+          </p>
+        </div>
       </div>
     </div>
 
