adjusted the balance of the hero on desktop

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
         <div class="point">
           <h4 id="first-point-header">It isn't easy</h4>
           <p id="first-point-body">
-            Pregnancy isn't an easy thing for a woman to go through. Through the
-            9 months, a woman will experience weight gain, increased heart
+            Pregnancy isn't an easy thing for a woman to go through. Throughout
+            the 9 months, a woman will experience weight gain, increased heart
             functions, changes in hormones, and much more. It is not an easy
             life change and can result in health risks if the pregnancy goes
             wrong.
