--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@
           prevent unnecessary death due to pregnancy complications.
         </p>
         <a href="#donate"
-          ><button id="hero-button" onmouseover="hoverButton()">
-            Make a Difference
-          </button></a
+          ><button id="hero-button">Make a Difference</button></a
         >
       </div>
     </main>
@@ -202,15 +200,15 @@
       <h1>Donate to the Cause</h1>
       <div class="money-box">
         <div class="preset-dollar-box">
-          <div class="dollar-buttons">$1</div>
-          <div class="dollar-buttons">$5</div>
-          <div class="dollar-buttons">$10</div>
-          <div class="dollar-buttons">$20</div>
-          <div class="dollar-buttons">$50</div>
+          <button id="one-dollar" class="dollar-buttons">$1</button>
+          <button id="five-dollar" class="dollar-buttons">$5</button>
+          <button id="ten-dollar" class="dollar-buttons">$10</button>
+          <button id="twenty-dollar" class="dollar-buttons">$20</button>
+          <button id="fifty-dollar" class="dollar-buttons">$50</button>
         </div>
         <p>or</p>
         <div class="user-amount-box">
-          <input type="text" id="money" name="money" />
+          <input type="number" id="money" name="money" />
           <label for="money">Enter Your Own</label>
         </div>
       </div>
@@ -304,7 +302,7 @@
             </div>
 
             <div class="zip">
-              <input type="text" id="zip" name="zip" />
+              <input type="number" id="zip" name="zip" />
               <label for="zip">Zipcode</label>
             </div>
           </div>
@@ -312,7 +310,7 @@
         <div class="email-phoneNumber">
           <input type="text" id="email" name="email" />
           <label for="email">Email Address</label>
-          <input type="text" id="phone-number" name="phone-number" />
+          <input type="number" id="phone-number" name="phone-number" />
           <label for="phone-number">Phone Number</label>
         </div>
       </div>
@@ -326,7 +324,7 @@
           </p>
         </div>
 
-        <button>Donate</button>
+        <button id="donate-button">Donate</button>
       </div>
     </div>
 
