added onclick events to money buttons

--- a/index.html
+++ b/index.html
@@ -200,11 +200,46 @@
       <h1>Donate to the Cause</h1>
       <div class="money-box">
         <div class="preset-dollar-box">
-          <button id="one-dollar" class="dollar-buttons">$1</button>
-          <button id="five-dollar" class="dollar-buttons">$5</button>
-          <button id="ten-dollar" class="dollar-buttons">$10</button>
-          <button id="twenty-dollar" class="dollar-buttons">$20</button>
-          <button id="fifty-dollar" class="dollar-buttons">$50</button>
+          <button
+            onmouseover="dollarButtonHover('one')"
+            onclick="dollarButtonBackground('one')"
+            id="one-dollar"
+            class="dollar-buttons"
+          >
+            $1
+          </button>
+          <button
+            onmouseover="dollarButtonHover('five')"
+            onclick="dollarButtonBackground('five')"
+            id="five-dollar"
+            class="dollar-buttons"
+          >
+            $5
+          </button>
+          <button
+            onmouseover="dollarButtonHover('ten')"
+            onclick="dollarButtonBackground('ten')"
+            id="ten-dollar"
+            class="dollar-buttons"
+          >
+            $10
+          </button>
+          <button
+            onmouseover="dollarButtonHover('twenty')"
+            onclick="dollarButtonBackground('twenty')"
+            id="twenty-dollar"
+            class="dollar-buttons"
+          >
+            $20
+          </button>
+          <button
+            onmouseover="dollarButtonHover('fifty')"
+            onclick="dollarButtonBackground('fifty')"
+            id="fifty-dollar"
+            class="dollar-buttons"
+          >
+            $50
+          </button>
         </div>
         <p>or</p>
         <div class="user-amount-box">
