--- a/index.html
+++ b/index.html
@@ -243,7 +243,12 @@
         </div>
         <p>or</p>
         <div class="user-amount-box">
-          <input type="number" id="money" name="money" />
+          <input
+            onclick="dollarButtonBackground('none')"
+            type="number"
+            id="money"
+            name="money"
+          />
           <label for="money">Enter Your Own</label>
         </div>
       </div>
@@ -362,6 +367,25 @@
         <button id="donate-button">Donate</button>
       </div>
     </div>
+
+    <footer>
+      <div class="top-footer">
+        <div class="sponsor">
+          <h4>Sponsored By</h4>
+          <img
+            src="./images/center-for-reproductive-rights-logo.png"
+            alt="center for reproductive rights logo"
+          />
+        </div>
+        <div class="links">
+          <p>Privacy Policy</p>
+          <p>Contact Us</p>
+        </div>
+      </div>
+      <div class="bottom-footer">
+        <h3>The Choice is Ours &#169; 2023</h3>
+      </div>
+    </footer>
 
     <script src="./script.js"></script>
   </body>
