--- a/index.html
+++ b/index.html
@@ -368,6 +368,21 @@
       </div>
     </div>
 
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+      <!-- Modal content -->
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <p>
+          Thanks for your donation! <br />
+          <span
+            >Disclaimer: You didn't actually donate anything. This is just a
+            confirmation to show the form works.</span
+          >
+        </p>
+      </div>
+    </div>
+
     <footer>
       <div class="top-footer">
         <div class="sponsor">
