changed some of the copy in the about section

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         the womb and was denied an abortion in Texas due to laws put in place.
         The fetus was long dead and risking going septic yet the law still
         prohibited it. This must be stopped. <br />
-        Click the images below to find out more.
+        Read below to learn more.
       </p>
       <div class="flexbox">
         <div class="point">
